modifiche varie. traduzione colori in inglese, cambiamenti form login e modifiche bottoni di condivisione

--- a/src/main/java/gui/BoardForm.form
+++ b/src/main/java/gui/BoardForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="board" layout-manager="GridLayoutManager" row-count="4" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="875" height="548"/>
+      <xy x="20" y="20" width="912" height="583"/>
     </constraints>
     <properties>
       <background color="-6231077"/>
@@ -43,28 +43,23 @@
         </constraints>
         <properties>
           <background color="-1114125"/>
+          <font name="Elephant" size="14" style="0"/>
+          <foreground color="-16777216"/>
         </properties>
       </component>
       <component id="e95f0" class="javax.swing.JTextField" binding="textFieldSearchDate">
         <constraints>
-          <grid row="1" column="6" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="5" row-span="1" col-span="6" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="5086d" class="javax.swing.JLabel" binding="campo4">
-        <constraints>
-          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-1114125"/>
           <font name="Elephant" size="14" style="0"/>
           <foreground color="-16777216"/>
-          <text value="Search by Date"/>
         </properties>
       </component>
-      <grid id="636b1" binding="campo1" layout-manager="GridLayoutManager" row-count="11" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="636b1" binding="campo1" layout-manager="GridLayoutManager" row-count="13" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
           <grid row="2" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -81,26 +76,15 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-1"/>
+              <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
               <foreground color="-16777216"/>
               <model/>
             </properties>
           </component>
-          <component id="4ba17" class="javax.swing.JButton" binding="shareBoardButton" default-binding="true">
+          <component id="1c2a1" class="javax.swing.JButton" binding="todayDueDate">
             <constraints>
-              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-1114125"/>
-              <font name="Elephant" size="14" style="0"/>
-              <foreground color="-16777216"/>
-              <text value="Share Board"/>
-            </properties>
-          </component>
-          <component id="1c2a1" class="javax.swing.JButton" binding="dueDateButton" default-binding="true">
-            <constraints>
-              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -109,9 +93,9 @@
               <text value="Today DueDate"/>
             </properties>
           </component>
-          <component id="fe384" class="javax.swing.JButton" binding="addToDoButton" default-binding="true">
+          <component id="fe384" class="javax.swing.JButton" binding="addToDo">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -120,9 +104,9 @@
               <text value="Add ToDo"/>
             </properties>
           </component>
-          <component id="da564" class="javax.swing.JButton" binding="orderToDoByTitleButton" default-binding="true">
+          <component id="da564" class="javax.swing.JButton" binding="orderToDoByTitle">
             <constraints>
-              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -133,7 +117,7 @@
           </component>
           <component id="165e8" class="javax.swing.JButton" binding="MoveUp">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -142,20 +126,20 @@
               <text value="MoveUp"/>
             </properties>
           </component>
-          <component id="d13f1" class="javax.swing.JButton" binding="buttonOrderByDate">
+          <component id="d13f1" class="javax.swing.JButton" binding="OrderByDueDate">
             <constraints>
-              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="12" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
               <foreground color="-16777216"/>
-              <text value="Order ToDo By Date"/>
+              <text value="Order ToDo By DueDate"/>
             </properties>
           </component>
           <component id="c5a0b" class="javax.swing.JButton" binding="MoveDown">
             <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -164,26 +148,15 @@
               <text value="MoveDown"/>
             </properties>
           </component>
-          <component id="16bd9" class="javax.swing.JButton" binding="deleteToDoButton" default-binding="true">
+          <component id="16bd9" class="javax.swing.JButton" binding="deleteToDo">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
               <font name="Elephant" size="14" style="0"/>
               <foreground color="-16777216"/>
               <text value="Delete ToDo"/>
-            </properties>
-          </component>
-          <component id="716a8" class="javax.swing.JButton" binding="changeBoard">
-            <constraints>
-              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-1114125"/>
-              <font name="Elephant" size="14" style="0"/>
-              <foreground color="-16777216"/>
-              <text value="Change Board"/>
             </properties>
           </component>
           <component id="467b9" class="javax.swing.JComboBox" binding="colorChange">
@@ -199,6 +172,52 @@
               </model>
             </properties>
           </component>
+          <component id="28f09" class="javax.swing.JComboBox" binding="memberdToDo">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1114125"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16777216"/>
+              <model>
+                <item value="Members ToDo"/>
+              </model>
+            </properties>
+          </component>
+          <component id="716a8" class="javax.swing.JButton" binding="changeBoard">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1114125"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16777216"/>
+              <text value="Change Board"/>
+            </properties>
+          </component>
+          <component id="4ba17" class="javax.swing.JButton" binding="shareToDo">
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1114125"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16777216"/>
+              <text value="Share ToDo"/>
+            </properties>
+          </component>
+          <component id="e7aa7" class="javax.swing.JButton" binding="changeSharing">
+            <constraints>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1114125"/>
+              <font name="Elephant" size="14" style="0"/>
+              <foreground color="-16777216"/>
+              <text value="Change Sharing"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="9c1b9" class="javax.swing.JLabel" binding="campo2">
@@ -209,7 +228,18 @@
           <background color="-1114125"/>
           <font name="Elephant" size="14" style="0"/>
           <foreground color="-16777216"/>
-          <text value="Search by Title"/>
+          <text value="Search by Title:"/>
+        </properties>
+      </component>
+      <component id="5086d" class="javax.swing.JLabel" binding="campo4">
+        <constraints>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-1114125"/>
+          <font name="Elephant" size="14" style="0"/>
+          <foreground color="-16777216"/>
+          <text value="Search by Date:"/>
         </properties>
       </component>
     </children>
