--- a/src/main/java/gui/BoardForm.form
+++ b/src/main/java/gui/BoardForm.form
@@ -212,7 +212,7 @@
           </component>
         </children>
       </grid>
-      <component id="9c1b9" class="javax.swing.JLabel" binding="campo2">
+      <component id="9c1b9" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -223,7 +223,7 @@
           <text value="Search by Title:"/>
         </properties>
       </component>
-      <component id="5086d" class="javax.swing.JLabel" binding="campo4">
+      <component id="5086d" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
