--- a/src/main/java/gui/BoardForm.form
+++ b/src/main/java/gui/BoardForm.form
@@ -164,7 +164,7 @@
               </model>
             </properties>
           </component>
-          <component id="28f09" class="javax.swing.JComboBox" binding="memberdToDo">
+          <component id="28f09" class="javax.swing.JComboBox" binding="membersToDo">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
