--- a/src/main/java/gui/ToDoForm.form
+++ b/src/main/java/gui/ToDoForm.form
@@ -15,7 +15,7 @@
       <grid id="a9a11" binding="campo1" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="20" left="20" bottom="20" right="20"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-9187370"/>
@@ -42,6 +42,8 @@
             </constraints>
             <properties>
               <background color="-1114125"/>
+              <caretColor color="-16777216"/>
+              <font name="Elephant" size="14" style="0"/>
               <foreground color="-16777216"/>
               <name value=""/>
               <text value=""/>
@@ -65,6 +67,8 @@
             </constraints>
             <properties>
               <background color="-1114125"/>
+              <caretColor color="-16777216"/>
+              <font name="Elephant" size="14" style="0"/>
               <foreground color="-16777216"/>
             </properties>
           </component>
@@ -86,6 +90,8 @@
             </constraints>
             <properties>
               <background color="-1114125"/>
+              <caretColor color="-16777216"/>
+              <font name="Elephant" size="14" style="0"/>
               <foreground color="-16777216"/>
               <text value=""/>
             </properties>
@@ -108,6 +114,8 @@
             </constraints>
             <properties>
               <background color="-1114125"/>
+              <caretColor color="-16777216"/>
+              <font name="Elephant" size="14" style="0"/>
               <foreground color="-16777216"/>
             </properties>
           </component>
@@ -119,6 +127,8 @@
             </constraints>
             <properties>
               <background color="-1114125"/>
+              <caretColor color="-16777216"/>
+              <font name="Elephant" size="14" style="0"/>
               <foreground color="-16777216"/>
             </properties>
           </component>
@@ -151,6 +161,8 @@
             </constraints>
             <properties>
               <background color="-1114125"/>
+              <caretColor color="-16777216"/>
+              <font name="Elephant" size="14" style="0"/>
               <foreground color="-16777216"/>
             </properties>
           </component>
@@ -169,7 +181,7 @@
       <grid id="bc904" binding="campo2" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="20" left="20" bottom="20" right="20"/>
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-9187370"/>
@@ -178,7 +190,7 @@
         <children>
           <component id="39532" class="javax.swing.JButton" binding="deleteButton">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -189,7 +201,7 @@
           </component>
           <component id="37721" class="javax.swing.JComboBox" binding="colorChange">
             <constraints>
-              <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -202,7 +214,7 @@
           </component>
           <component id="1bce0" class="javax.swing.JButton" binding="buttonSave">
             <constraints>
-              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -214,7 +226,7 @@
           </component>
           <component id="d61ef" class="javax.swing.JButton" binding="openURL">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -225,7 +237,7 @@
           </component>
           <component id="fb542" class="javax.swing.JButton" binding="shareToDo">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -236,7 +248,7 @@
           </component>
           <component id="8f807" class="javax.swing.JButton" binding="changeSharing">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
@@ -247,7 +259,7 @@
           </component>
           <component id="44859" class="javax.swing.JComboBox" binding="membersToDo">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-1114125"/>
