--- a/src/main/java/gui/BoardForm.form
+++ b/src/main/java/gui/BoardForm.form
@@ -35,6 +35,8 @@
         </constraints>
         <properties>
           <background color="-1114125"/>
+          <caretColor color="-1114125"/>
+          <disabledTextColor color="-1114125"/>
           <font name="Elephant" size="14" style="0"/>
           <foreground color="-16777216"/>
         </properties>
